--- a/SDL_assert_data.mediawiki
+++ b/SDL_assert_data.mediawiki
@@ -32,9 +32,9 @@ A structure that contains information about an assertion.
 |'''function'''
 |the function containing the assertion
 |-
-|<rowstyle="color: #808080;">const struct SDL_assert_data*
+|const struct SDL_assert_data*
 |'''next'''
-|(internal use)
+|Pointer to next triggered assertion's info
 |}
 
 == Code Examples ==
@@ -43,7 +43,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-This structure is filled in with information about the assertion and is used by the assertion handler then added to the assertion report.
+This structure is filled in with information about the assertion and is used by the assertion handler then added to the assertion report. This is returned as a linked list from [[SDL_GetAssertionReport]]().
 
 == Related Functions ==
 :[[SDL_assert]]
