--- a/MigrationGuide.mediawiki
+++ b/MigrationGuide.mediawiki
@@ -20,7 +20,7 @@ These are the most important new features SDL 2 introduces:
 * Support for multiple audio devices
 * Support for multiple mice, tablets, etc.
 * Android and iOS support
-* Simple 2D rendering API that can use Direct3D, OpenGL, OpenGL ES, or software rendering behind the scenes.
+* Simple 2D rendering API that can use Direct3D, OpenGL, OpenGL ES, or software rendering behind the scenes
 * Force Feedback available on Windows, Mac OS X and Linux
 * XInput and XAudio2 support for Windows
 * Atomic operations
