--- a/SDL_GetCPUCacheLineSize.mediawiki
+++ b/SDL_GetCPUCacheLineSize.mediawiki
@@ -1,9 +1,8 @@
 <!-- pragma section-numbers off -->
 <!-- pragma camelcase off -->
-'''DRAFT'''
 
 = SDL_GetCPUCacheLineSize =
-Use this function to return the L1 cache line size of the CPU.
+Use this function to determine the L1 cache line size of the CPU.
 
 
 == Syntax ==
@@ -12,7 +11,7 @@ int SDL_GetCPUCacheLineSize(void)
 ```
 
 == Return Value ==
-Returns the L1 cache line size of the CPU on success^, or a negative error code on failure; call [[SDL_GetError]]() for more information^.
+Returns the L1 cache line size of the CPU.
 
 == Code Examples ==
 ```c++
