--- a/SDL_HasAltiVec.mediawiki
+++ b/SDL_HasAltiVec.mediawiki
@@ -1,9 +1,8 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-'''DRAFT'''
 
 = SDL_HasAltiVec =
-Use this function to ,,return true if,, ^determine whether^ the CPU has Alti<code></code>Vec features.
+Use this function to determine whether the CPU has Alti<code></code>Vec features.
 
 
 == Syntax ==
