--- a/SDL_HasMMX.mediawiki
+++ b/SDL_HasMMX.mediawiki
@@ -1,9 +1,8 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-'''DRAFT'''
 
 = SDL_HasMMX =
-Use this function to ,,return true if,, ^determine whether^ the CPU has MMX features.
+Use this function to determine whether the CPU has MMX features.
 
 
 == Syntax ==
