--- a/SDL_HasSSE2.mediawiki
+++ b/SDL_HasSSE2.mediawiki
@@ -1,9 +1,8 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-'''DRAFT'''
 
 = SDL_HasSSE2 =
-Use this function to ,,return true if,, ^determine whether^ the CPU has SSE2 features.
+Use this function to determine whether the CPU has SSE2 features.
 
 
 == Syntax ==
@@ -23,7 +22,14 @@ You can add your code example here
 ''You can add useful comments here''
 
 == Related Functions ==
-:[[SDL_HasSSE]] ???
+:[[SDL_Has3DNow]]
+:[[SDL_HasAltiVec]]
+:[[SDL_HasMMX]]
+:[[SDL_HasRDTSC]]
+:[[SDL_HasSSE]]
+:[[SDL_HasSSE3]]
+:[[SDL_HasSSE41]]
+:[[SDL_HasSSE42]]
 
 ----
 [[CategoryAPI]], [[CategoryCPU]]
