--- a/SDL_HasSSE41.mediawiki
+++ b/SDL_HasSSE41.mediawiki
@@ -3,7 +3,7 @@
 '''DRAFT'''
 
 = SDL_HasSSE41 =
-Use this function to ,,return true if,, ^determine whether^ the CPU has SSE4.1 features.
+Use this function to determine whether the CPU has SSE4.1 features.
 
 
 == Syntax ==
@@ -23,6 +23,10 @@ You can add your code example here
 ''You can add useful comments here''
 
 == Related Functions ==
+:[[SDL_Has3DNow]]
+:[[SDL_HasAltiVec]]
+:[[SDL_HasMMX]]
+:[[SDL_HasRDTSC]]
 :[[SDL_HasSSE]]
 :[[SDL_HasSSE2]]
 :[[SDL_HasSSE3]]
