--- a/SDL_SwapLE64.mediawiki
+++ b/SDL_SwapLE64.mediawiki
@@ -3,7 +3,7 @@
 '''DRAFT'''
 
 = SDL_SwapLE64 =
-Use this function to swap byte order from little-endian to native ^(if necessary)^.
+Use this function to swap the byte order of a 64-bit little-endian value to native ordering.
 
 
 == Syntax ==
@@ -14,11 +14,11 @@ Uint64 SDL_SwapLE64(Uint64 x)
 == Function Parameters ==
 {|
 |'''x'''
-|the data to be swapped
+|the value to be swapped
 |}
 
 == Return Value ==
-Returns the data in native Uint64 format. ???
+Returns the native 64-bit value.
 
 == Code Examples ==
 ```c++
@@ -29,6 +29,7 @@ You can add your code example here
 ''You can add useful comments here''
 
 == Related Functions ==
+:[[SDL_Swap64]]
 :[[SDL_SwapBE64]]
 
 ----
